[gd_scene load_steps=2 format=3 uid="uid://by4myqk8n78l4"]

[ext_resource type="Script" path="res://turn_manager.gd" id="1_u6owk"]

[node name="TurnManager" type="Node"]
script = ExtResource("1_u6owk")

[node name="PlayerTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="PlayerTimer" to="." method="_on_player_timer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
